# smart_investment_rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
http_requests/: api.http
migrations/: 20260605192930_create_assets.up.sql  20260610140054_create_users.up.sql  20260617235802_create_owned_assets.down.sql  20260617235802_create_owned_assets.up.sql  20260618020000_add_updated_at_to_assets.down.sql  20260618020000_add_updated_at_to_assets.up.sql
src/: app.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs
src/auth/: admin.rs  user.rs
src/auth/snapshots/: smart_investment_rust__auth__admin__test__admin_extraction_invalid_credentials.snap  smart_investment_rust__auth__admin__test__admin_extraction_missing_header.snap  smart_investment_rust__auth__admin__test__admin_extraction_success.snap  smart_investment_rust__auth__user__test__user_authentication_invalid_password.snap  smart_investment_rust__auth__user__test__user_authentication_non_existent.snap  smart_investment_rust__auth__user__test__user_authentication_success.snap  smart_investment_rust__auth__user__test__user_registration_duplicate.snap  smart_investment_rust__auth__user__test__user_registration_success.snap
src/routes/: api.rs  frontend.rs
src/routes/fixtures/: bitcoin_asset.sql
src/routes/snapshots/: smart_investment_rust__routes__api__test__update_asset.snap  smart_investment_rust__routes__frontend__test__create_user_page_renders.snap  smart_investment_rust__routes__frontend__test__create_user_success.snap  smart_investment_rust__routes__frontend__test__create_user_username_taken.snap  smart_investment_rust__routes__frontend__test__login_page_renders.snap  smart_investment_rust__routes__frontend__test__login_success.snap  (+2 more)
templates/: assets.html  create_user.html  login.html
tests/: error.rs  integration_tests.rs  repository.rs
tests/auth/: admin.rs  user.rs
tests/routes/: api.rs  frontend.rs  mod.rs
tests/snapshots/: integration_tests__error__asset_does_not_exists_maps_to_404.snap  integration_tests__error__database_error_maps_to_500.snap  integration_tests__error__invalid_credentials_maps_to_401.snap  integration_tests__error__jwt_error_maps_to_500.snap  integration_tests__error__missing_authorization_maps_to_400.snap  integration_tests__error__user_does_not_exists_maps_to_404.snap  integration_tests__error__username_taken_maps_to_409.snap  integration_tests__repository__get_user_by_id_found.snap  integration_tests__repository__get_user_by_id_not_found.snap  integration_tests__repository__insert_and_list_owned_asset.snap  integration_tests__repository__insert_owned_asset_invalid_foreign_key.snap  integration_tests__repository__list_asset_names.snap  integration_tests__repository__list_owned_assets_aggregates_multiple_purchases.snap  integration_tests__repository__list_owned_assets_empty.snap  integration_tests__repository__update_asset_returns_none_for_missing_id.snap  integration_tests__repository__update_asset_value_by_name_updates_price.snap
(+35 files in other folders)
