[package]
name = "smart_investment_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.16.0", features = ["derive"] }
axum = { version = "0.8.9", features = ["macros"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
password-auth = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["macros", "runtime-tokio", "postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
